data/derived/comb/progs/unify/prog0939.ml.out
Characters 107-108:
  | (w,y)::t -> ((w+y)/10)::((w+y) mod 10)::t
                                            ^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
